--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 * text=auto
 *.pth filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
+*.kers filter=lfs diff=lfs merge=lfs -text
+*.keras filter=lfs diff=lfs merge=lfs -text
